methods.slug.SlugHunting.scala.code
def hunt() {
    while(isOverBaggle() == false){
      if(isFacingTrail == true){
        brushDown()
        forward()
        brushUp()
      }
      else {
        left()

      }
    }
  pickupBaggel()
}

def isFacingTrail():Boolean = {
   		if(isFacingWall()){
      return false
      }
 			 
      else {forward}
  		if (getGroundColor() == Color.green){
        backward()
        return true
      }
  		else {backward() 
            return false}
  
}